--- a/dotfiles/sway/config
+++ b/dotfiles/sway/config
@@ -219,7 +219,7 @@ bindsym $mod+r mode "resize"
 
     # Special key to take a screenshot with grim
     bindsym Print exec grim
-
+		input '*' xkb_layout it
 #
 # Status Bar:
 #
