--- a/dotfiles/sway/config
+++ b/dotfiles/sway/config
@@ -22,6 +22,7 @@ set $menu wmenu-run
 #
 # Default wallpaper (more resolutions are available in @datadir@/backgrounds/sway/)
 output * bg @datadir@/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
+input * xkb_layout it
 #
 # Example configuration:
 #
