--- a/dotfiles/sway/config
+++ b/dotfiles/sway/config
@@ -16,13 +16,13 @@ set $right l
 # Your preferred terminal emulator
 set $term kitty
 # Your preferred application launcher
-set $menu wmenu-run
+set $menu rofi
 
 ### Output configuration
 #
 # Default wallpaper (more resolutions are available in @datadir@/backgrounds/sway/)
 input * xkb_layout it
-output * bg /home/magigraph/repos/nixos/dotfiles/sway/claymore-bg.jpg
+output * bg /home/magigraph/repos/nixos/dotfiles/sway/claymore-bg.jpg fill
 #
 # Example configuration:
 #
@@ -69,10 +69,10 @@ output * bg /home/magigraph/repos/nixos/dotfiles/sway/claymore-bg.jpg
     bindsym $mod+Return exec $term
 
     # Kill focused window
-    bindsym $mod+Shift+q kill
+    bindsym $mod+q kill
 
     # Start your launcher
-    bindsym $mod+d exec $menu
+    bindsym $mod+d exec $menu -show drun
 
     # Drag floating windows by holding down $mod and left mouse button.
     # Resize them with right mouse button + $mod.
@@ -221,16 +221,16 @@ bindsym $mod+r mode "resize"
     # Special key to take a screenshot with grim
     bindsym Print exec grim
 		input '*' xkb_layout it
-#
+
 # Status Bar:
 #
 # Read `man 5 sway-bar` for more information about this section.
 bar {
-    position top
-
-    # When the status_command prints a new line to stdout, swaybar updates.
+   
+    swaybar_command waybar
+	# When the status_command prints a new line to stdout, swaybar updates.
     # The default just shows the current date and time.
-    status_command while date +'%Y-%m-%d %X'; do sleep 1; done
+    status_command while date +'%Y-%m-%d %I:%M:%S %p'; do sleep 1; done
 
     colors {
         statusline #ffffff
@@ -238,5 +238,15 @@ bar {
         inactive_workspace #32323200 #32323200 #5c5c5c
     }
 }
+
+#border
+default_border pixel 1
+gaps inner 10 
+gaps outer 5
+font pongo:monospace Regular 0
+
+default_floating_border pixel 0
+titlebar_padding 1
+titlebar_border_thickness 0
 
 include @sysconfdir@/sway/config.d/*
