--- a/dotfiles/sway/config
+++ b/dotfiles/sway/config
@@ -243,7 +243,7 @@ bar {
 default_border pixel 1
 gaps inner 10 
 gaps outer 5
-font fira-code:monospace Regular 0
+font fira-code Regular 0
 
 default_floating_border pixel 0
 titlebar_padding 1
