--- a/dotfiles/sway/config
+++ b/dotfiles/sway/config
@@ -152,7 +152,7 @@ output * bg /home/magigraph/repos/nixos/dotfiles/sway/claymore-bg.jpg fill
     bindsym $mod+e layout toggle split
 
     # Make the current focus fullscreen
-    bindsym $mod+f fullscreen
+
 
     # Toggle the current focus between tiling and floating mode
     bindsym $mod+Shift+space floating toggle
@@ -166,13 +166,11 @@ output * bg /home/magigraph/repos/nixos/dotfiles/sway/claymore-bg.jpg fill
 # Scratchpad:
 #
     # Sway has a "scratchpad", which is a bag of holding for windows.
-    # You can send windows there and get them back later.
-
+  
     # Move the currently focused window to the scratchpad
     bindsym $mod+Shift+minus move scratchpad
 
     # Show the next scratchpad window or hide the focused scratchpad window.
-    # If there are multiple scratchpad windows, this command cycles through them.
     bindsym $mod+minus scratchpad show
 #
 # Resizing containers:
@@ -198,30 +196,8 @@ mode "resize" {
     bindsym Escape mode "default"
 }
 bindsym $mod+r mode "resize"
+
 #
-# Utilities:
-#
-    # Special keys to adjust volume via PulseAudio
-    bindsym --locked XF86AudioMute exec pactl set-sink-mute \@DEFAULT_SINK@ toggle
-    bindsym --locked XF86AudioLowerVolume exec pactl set-sink-volume \@DEFAULT_SINK@ -5%
-    bindsym --locked XF86AudioRaiseVolume exec pactl set-sink-volume \@DEFAULT_SINK@ +5%
-    bindsym --locked XF86AudioMicMute exec pactl set-source-mute \@DEFAULT_SOURCE@ toggle
-
-    # Special keys to control media via playerctl
-    bindsym --locked XF86AudioPlay exec playerctl play-pause
-    bindsym --locked XF86AudioPause exec playerctl play-pause
-    bindsym --locked XF86AudioPrev exec playerctl previous
-    bindsym --locked XF86AudioNext exec playerctl next
-    bindsym --locked XF86AudioStop exec playerctl stop
-
-    # Special keys to adjust brightness via brightnessctl
-    bindsym --locked XF86MonBrightnessDown exec brightnessctl set 5%-
-    bindsym --locked XF86MonBrightnessUp exec brightnessctl set 5%+
-
-    # Special key to take a screenshot with grim
-    bindsym Print exec grim
-		input '*' xkb_layout it
-
 # Status Bar:
 #
 # Read `man 5 sway-bar` for more information about this section.
@@ -239,14 +215,32 @@ bar {
     }
 }
 
-#border
-default_border pixel 1
+# My Custom
+
+xwayland enable
+bindsym Print exec flameshot gui
+bindsym $mod+Shift+t exec alacritty
+bindsym $mod+Control+l exec swaylock
+bindsym $mod+Shift+f exec nautilus
+bindsym XF86AudioRaiseVolume exec pipewire-pulse set-sink-volume @DEFAULT_SINK@ +10%
+bindsym XF86AudioLowerVolume exec pipewire-pulse set-sink-volume @DEFAULT_SINK@ -10%
+bindsym XF86AudioMute exec pipewire-pulse set-sink-mute @DEFAULT_SINK@ toggle
+bindsym XF86MonBrightnessUp exec brightnessctl s +10%
+bindsym XF86MonBrightnessDown exec brightnessctl s 10%-
+
+#Setting title 
+title_align center
+
+# Setting name title only name program
+for_window [title="."] title_format "%app_id"
+
+# Setting Border
+default_border pixel 3
 gaps inner 10 
 gaps outer 5
-font fira-code Regular 1
 
 default_floating_border pixel 0
 titlebar_padding 1
 titlebar_border_thickness 0
 
-include @sysconfdir@/sway/config.d/*
+include /etc/sway/config.d/*
