--- a/dotfiles/waybar/config
+++ b/dotfiles/waybar/config
@@ -1,18 +1,55 @@
-
+// -*- mode: jsonc -*-
 {
-    "layer": "top", // Waybar at top layer
+    // "layer": "top", // Waybar at top layer
     // "position": "bottom", // Waybar position (top|bottom|left|right)
-    "height": 32, // Waybar height (to be removed for auto height)
+    "height": 30, // Waybar height (to be removed for auto height)
+    // "width": 1280, // Waybar width
     "spacing": 4, // Gaps between modules (4px)
-    "margin-top":5,
-    "margin-left":12,
-    "margin-right":12,
-    "margin-bottom":0,
-    
-    "modules-left": ["sway/workspaces", "sway/mode", "sway/scratchpad", "custom/media","sway/window"],
-    "modules-center": ["clock"],
-    "modules-right": [ "pulseaudio", "network",  "battery", "battery#bat2","tray","custom/powermenu"],
-    
+    // Choose the order of the modules
+    "modules-left": [
+        "sway/workspaces",
+        "sway/mode",
+        "sway/scratchpad",
+        "custom/media"
+    ],
+    "modules-center": [
+        "sway/window"
+    ],
+    "modules-right": [
+        "mpd",
+        "idle_inhibitor",
+        "pulseaudio",
+        "network",
+        "power-profiles-daemon",
+        "cpu",
+        "memory",
+        "temperature",
+        "backlight",
+        "keyboard-state",
+        "sway/language",
+        "battery",
+        "battery#bat2",
+        "clock",
+        "tray",
+        "custom/power"
+    ],
+    // Modules configuration
+    // "sway/workspaces": {
+    //     "disable-scroll": true,
+    //     "all-outputs": true,
+    //     "warp-on-scroll": false,
+    //     "format": "{name}: {icon}",
+    //     "format-icons": {
+    //         "1": "",
+    //         "2": "",
+    //         "3": "",
+    //         "4": "",
+    //         "5": "",
+    //         "urgent": "",
+    //         "focused": "",
+    //         "default": ""
+    //     }
+    // },
     "keyboard-state": {
         "numlock": true,
         "capslock": true,
@@ -25,13 +62,6 @@
     "sway/mode": {
         "format": "<span style=\"italic\">{}</span>"
     },
-
-	"sway/window": {
-	
-		"format": " {app_id}",
-		"max-length": 50,
-	},
-
     "sway/scratchpad": {
         "format": "{icon} {count}",
         "show-empty": false,
@@ -44,7 +74,7 @@
         "format-disconnected": "Disconnected ",
         "format-stopped": "{consumeIcon}{randomIcon}{repeatIcon}{singleIcon}Stopped ",
         "unknown-tag": "N/A",
-        "interval": 2,
+        "interval": 5,
         "consume-icons": {
             "on": " "
         },
@@ -73,20 +103,25 @@
         }
     },
     "tray": {
-        "icon-size": 21,
-        "spacing": 10
+        // "icon-size": 21,
+        "spacing": 10,
+        // "icons": {
+        //   "blueman": "bluetooth",
+        //   "TelegramDesktop": "$HOME/.local/share/icons/hicolor/16x16/apps/telegram.png"
+        // }
     },
     "clock": {
         // "timezone": "America/New_York",
         "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
-	"format": " {:%H:%M}",
-	"format-alt": "{:%Y-%m-%d} "
+        "format-alt": "{:%Y-%m-%d}"
     },
-
+    "cpu": {
+        "format": "{usage}% ",
+        "tooltip": false
+    },
     "memory": {
         "format": "{}% "
     },
-
     "temperature": {
         // "thermal-zone": 2,
         // "hwmon-path": "/sys/class/hwmon/hwmon2/temp1_input",
@@ -96,47 +131,56 @@
         "format-icons": ["", "", ""]
     },
     "backlight": {
-         "device": "acpi_video1",
-	"scroll-step": 1,
+        // "device": "acpi_video1",
         "format": "{percent}% {icon}",
         "format-icons": ["", "", "", "", "", "", "", "", ""]
     },
     "battery": {
         "states": {
-            "good": 52,
+            // "good": 95,
             "warning": 30,
-            "critical": 30
+            "critical": 15
         },
-        "format": "<span font='Font Awesome 5 Free 11'>{icon}</span> {capacity}%",
-
-        "format-charging": " {capacity}%",
+        "format": "{capacity}% {icon}",
+        "format-full": "{capacity}% {icon}",
+        "format-charging": "{capacity}% ",
         "format-plugged": "{capacity}% ",
-         "format-alt": "{time}{icon}",
-        //  "format-good": "", // An empty format will hide the module
-         "format-full": " Battery is full",
+        "format-alt": "{time} {icon}",
+        // "format-good": "", // An empty format will hide the module
+        // "format-full": "",
         "format-icons": ["", "", "", "", ""]
     },
     "battery#bat2": {
         "bat": "BAT2"
     },
+    "power-profiles-daemon": {
+      "format": "{icon}",
+      "tooltip-format": "Power profile: {profile}\nDriver: {driver}",
+      "tooltip": true,
+      "format-icons": {
+        "default": "",
+        "performance": "",
+        "balanced": "",
+        "power-saver": ""
+      }
+    },
     "network": {
         // "interface": "wlp2*", // (Optional) To force the use of this interface
-        "format-wifi": "  {essid}",
+        "format-wifi": "{essid} ({signalStrength}%) ",
         "format-ethernet": "{ipaddr}/{cidr} ",
         "tooltip-format": "{ifname} via {gwaddr} ",
         "format-linked": "{ifname} (No IP) ",
-        "format-disconnected": "⚠ Disconnected",
-        //"format-alt": "{ifname}: {ipaddr}/{cidr}",
-	"on-click": "rofi-wifi-menu/rofi-wifi-menu.sh"
+        "format-disconnected": "Disconnected ⚠",
+        "format-alt": "{ifname}: {ipaddr}/{cidr}"
     },
     "pulseaudio": {
-        "scroll-step": 5, // %, can be a float
-        "format": "{icon} {volume}%",
+        // "scroll-step": 1, // %, can be a float
+        "format": "{volume}% {icon} {format_source}",
         "format-bluetooth": "{volume}% {icon} {format_source}",
         "format-bluetooth-muted": " {icon} {format_source}",
         "format-muted": " {format_source}",
-        //"format-source": "{volume}% ",
-       // "format-source-muted": "",
+        "format-source": "{volume}% ",
+        "format-source-muted": "",
         "format-icons": {
             "headphone": "",
             "hands-free": "",
@@ -146,9 +190,10 @@
             "car": "",
             "default": ["", "", ""]
         },
-         },
+        "on-click": "pavucontrol"
+    },
     "custom/media": {
-        "format": "{icon} {}",
+        "format": "{icon} {text}",
         "return-type": "json",
         "max-length": 40,
         "format-icons": {
@@ -159,9 +204,16 @@
         "exec": "$HOME/.config/waybar/mediaplayer.py 2> /dev/null" // Script in resources folder
         // "exec": "$HOME/.config/waybar/mediaplayer.py --player spotify 2> /dev/null" // Filter player based on name
     },
-   "custom/powermenu":{
-    "format": "⏻",
-    "on-click": "nwg-bar",
-    "tooltip": false
-   },
+    "custom/power": {
+        "format" : "⏻ ",
+		"tooltip": false,
+		"menu": "on-click",
+		"menu-file": "$HOME/.config/waybar/power_menu.xml", // Menu file in resources folder
+		"menu-actions": {
+			"shutdown": "shutdown",
+			"reboot": "reboot",
+			"suspend": "systemctl suspend",
+			"hibernate": "systemctl hibernate"
+		}
+    }
 }
