--- a/dotfiles/sway/config
+++ b/dotfiles/sway/config
@@ -4,6 +4,9 @@
 #
 # Read `man 5 sway` for a complete reference.
 
+# nixos compatible config
+include /etc/sway/config.d/*
+
 ### Variables
 #
 # Logo key. Use Mod1 for Alt.
